--- a/task2/index.html
+++ b/task2/index.html
@@ -1,10 +1,11 @@
-<html>
-    <head>
-        <meta charset-"utf-8">
-        <title>self</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        </head>
-    <body>
-    <script type="text/javascript" src="js/scripts.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+    <meta charset-"utf-8">
+    <title>self</title>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+</head>
+<body>
+     <script type="text/javascript" src="js/scripts.js"></script>
+</body>
 </html>     
