--- a/task1/index.html
+++ b/task1/index.html
@@ -1,9 +1,10 @@
-<html>
-    <head>
-        <meta charset-"utf-8">
-        <title>phone1</title>
-        </head>
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+    <meta charset-"utf-8">
+    <title>phone1</title>
+</head>
     <body>
-    <script type="text/javascript" src="js/scripts.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
     </body>
 </html>     
